--- a/ios/Twitter/Info.plist
+++ b/ios/Twitter/Info.plist
@@ -4,6 +4,12 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>Privacy – Photo Library Additions Usage Description</key>
+	<string>App needs photo library Access</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string></string>
+	<key>NSCameraUsageDescription</key>
+	<string>App needs Camera Access Permission for testing</string>
 	<key>CFBundleDisplayName</key>
 	<string>Twitter</string>
 	<key>CFBundleExecutable</key>
@@ -38,7 +44,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
