--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
     "@types/react": "^16.9.2",
     "i18n": "^0.8.3",
     "i18n-js": "^3.3.0",
+    "lodash.memoize": "^4.1.2",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-elements": "^1.2.0",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-image-picker": "^1.1.0",
     "react-native-localize": "^1.2.1",
+    "react-native-user-defaults": "^0.1.5",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.0.5",
+    "react-navigation": "^4.0.6",
     "react-navigation-stack": "^1.8.0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
@@ -29,6 +33,8 @@
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
     "eslint": "^6.4.0",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-native": "^3.7.0",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
     "react-test-renderer": "16.8.6",
