--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/geolocation": "2.0.2",
     "@types/react": "16.9.2",
+    "axios": "0.19.0",
     "i18n": "0.8.3",
     "i18n-js": "3.3.0",
     "lodash": "4.17.15",
@@ -17,19 +19,25 @@
     "react": "16.8.6",
     "react-moment": "0.9.2",
     "react-native": "0.60.5",
+    "react-native-audio-recorder-player": "2.4.2",
     "react-native-elements": "1.2.0",
     "react-native-gesture-handler": "1.4.1",
     "react-native-image-picker": "1.1.0",
     "react-native-localize": "1.2.1",
     "react-native-maps": "0.26.0",
+    "react-native-popup-menu": "0.15.6",
+    "react-native-record-sound": "1.2.6",
+    "react-native-sound-recorder": "1.3.3",
     "react-native-user-defaults": "0.1.5",
     "react-native-vector-icons": "6.6.0",
     "react-navigation": "4.0.6",
+    "react-navigation-redux-helpers": "4.0.1",
     "react-navigation-stack": "1.8.0",
     "react-redux": "7.1.1",
     "redux": "4.0.4",
     "redux-logger": "3.0.6",
     "redux-persist": "6.0.0",
+    "redux-thunk": "2.3.0",
     "short-id": "0.1.0-1",
     "shortid": "2.2.15",
     "yup": "0.27.0"
