--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/geolocation": "2.0.2",
     "@types/react": "16.9.2",
     "axios": "0.19.0",
+    "formik": "1.5.8",
     "i18n": "0.8.3",
     "i18n-js": "3.3.0",
     "lodash": "4.17.15",
@@ -35,6 +36,7 @@
     "react-navigation-stack": "1.8.0",
     "react-redux": "7.1.1",
     "redux": "4.0.4",
+    "redux-actions": "2.6.5",
     "redux-logger": "3.0.6",
     "redux-persist": "6.0.0",
     "redux-thunk": "2.3.0",
@@ -47,12 +49,12 @@
     "@babel/runtime": "7.6.0",
     "@react-native-community/eslint-config": "0.0.5",
     "babel-jest": "24.9.0",
-    "eslint": "^6.1.0",
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-plugin-import": "2.18.2",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "1.7.0",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "eslint-plugin-react-native": "3.7.0",
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.56.0",
