--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,6 +38,8 @@ target 'Twitter' do
 
   pod 'RNSoundRecorder', :path => '../node_modules/react-native-sound-recorder'
 
+  pod 'RNShare', :path => '../node_modules/react-native-share'
+
   target 'TwitterTests' do
     inherit! :search_paths
     # Pods for testing
