--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-maps": "0.26.0",
     "react-native-popup-menu": "0.15.6",
     "react-native-record-sound": "1.2.6",
+    "react-native-share": "2.0.0",
     "react-native-sound-recorder": "1.3.3",
     "react-native-user-defaults": "0.1.5",
     "react-native-vector-icons": "6.6.0",
